# ChangeLog for dev-tex/bibtexu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/bibtexu/ChangeLog,v 1.40 2013/04/25 21:26:01 ago Exp $

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for sh, wrt bug #449298

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for s390, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for sparc, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for arm, wrt bug #449298

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for alpha, wrt bug #449298

  19 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for ia64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for ppc64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for ppc, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for x86, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for amd64, wrt bug #449298

  17 Apr 2013; Jeroen Roovers <jer@gentoo.org> bibtexu-3.71_p20120701.ebuild:
  Stable for HPPA (bug #449298).

*bibtexu-3.71_p20120701 (26 Jul 2012)

  26 Jul 2012; Alexis Ballier <aballier@gentoo.org>
  +bibtexu-3.71_p20120701.ebuild:
  Bump to TeX Live 2012 version.

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  bibtexu-3.71_p20110705.ebuild:
  keyword ~amd64-fbsd

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  -bibtexu-3.71_p20100722.ebuild, -bibtexu-3.71_p20110627.ebuild,
  -files/bibtexu-3.71_p20110627-invoc_name.patch:
  remove old

  06 May 2012; Raúl Porcel <armin76@gentoo.org> bibtexu-3.71_p20110705.ebuild: