@@ -1,6 +1,10 @@
 # ChangeLog for dev-tex/bibtexu
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/bibtexu/ChangeLog,v 1.40 2013/04/25 21:26:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/bibtexu/ChangeLog,v 1.41 2013/04/28 10:17:36 scarabeus Exp $
+
+  28 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org>
+  bibtexu-3.71_p20120701.ebuild:
+  Use subslot on icu so it is rebuild automatically with icu update.
 
   25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bibtexu-3.71_p20120701.ebuild:
   Stable for sh, wrt bug #449298
